Final changes in the notebooks

--- a/notebooks/inferencia.ipynb
+++ b/notebooks/inferencia.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyO3rO5DnEzuZKmytCfjtHik",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/luiseduaardo/PneuModel/blob/main/notebooks/inferencia.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,22 +12,18 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!git clone https://github.com/luiseduaardo/PneuModel.git\n",
-        "%cd PneuModel"
-      ],
+      "execution_count": 2,
       "metadata": {
-        "id": "va47GC9OpaZG",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "va47GC9OpaZG",
         "outputId": "b0b501f2-1fb3-429d-9984-32adec7021f4"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'PneuModel'...\n",
             "remote: Enumerating objects: 5960, done.\u001b[K\n",
@@ -55,25 +35,26 @@
             "/content/PneuModel\n"
           ]
         }
+      ],
+      "source": [
+        "!git clone https://github.com/luiseduaardo/PneuModel.git\n",
+        "%cd PneuModel"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install -r requirements.txt"
-      ],
+      "execution_count": 3,
       "metadata": {
-        "id": "fPA0hrx6Kfoe",
-        "outputId": "4e670387-b76b-461b-9e39-3a6230a0d60c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fPA0hrx6Kfoe",
+        "outputId": "4e670387-b76b-461b-9e39-3a6230a0d60c"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: pandas>=2.0 in /usr/local/lib/python3.12/dist-packages (from -r requirements.txt (line 1)) (2.2.2)\n",
             "Requirement already satisfied: numpy>=1.24 in /usr/local/lib/python3.12/dist-packages (from -r requirements.txt (line 2)) (2.0.2)\n",
@@ -137,10 +118,31 @@
             "Successfully installed tf-explain-0.3.1\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install -r requirements.txt"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xzqcLz7_KhTw",
+        "outputId": "e276c094-b38f-4590-d664-eed41391365d"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Arquivo baixado com sucesso. Extraindo...\n",
+            "✅ Dataset pronto em ./dataset\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "import zipfile\n",
@@ -174,24 +176,6 @@
         "        print(f\"✅ Dataset pronto em {EXTRACT_PATH}\")\n",
         "\n",
         "download_and_extract()"
-      ],
-      "metadata": {
-        "id": "xzqcLz7_KhTw",
-        "outputId": "e276c094-b38f-4590-d664-eed41391365d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Arquivo baixado com sucesso. Extraindo...\n",
-            "✅ Dataset pronto em ./dataset\n"
-          ]
-        }
       ]
     },
     {
@@ -211,36 +195,69 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zUU5SOIWvELw",
+        "outputId": "eee48ef5-7986-4ad2-fbba-a19505d7174b"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n",
+            "✅ Modelo carregado com sucesso!\n"
+          ]
+        }
+      ],
       "source": [
         "drive.mount('/content/drive')\n",
         "\n",
         "path_teste = \"./dataset/test_images\"\n",
         "model_path_drive = '/content/drive/MyDrive/PneuModel/modelo.keras'\n",
         "\n",
+        "# carregamento do modelo\n",
         "model = load_model(model_path_drive)\n",
         "print(\"✅ Modelo carregado com sucesso!\")"
-      ],
-      "metadata": {
-        "id": "zUU5SOIWvELw",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "eee48ef5-7986-4ad2-fbba-a19505d7174b"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n",
-            "✅ Modelo carregado com sucesso!\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JMTP-BHufvUL",
+        "outputId": "c4bdf1db-8d40-494d-acdf-a2bac3113473"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found 624 images belonging to 1 classes.\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/keras/src/trainers/data_adapters/py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
+            "  self._warn_if_super_not_called()\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[1m624/624\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m381s\u001b[0m 610ms/step\n"
+          ]
+        }
+      ],
       "source": [
         "# pré processamento da imagem\n",
         "test_datagen = tf.keras.preprocessing.image.ImageDataGenerator()\n",
@@ -255,73 +272,27 @@
         "\n",
         "# realiza a previsão\n",
         "previsoes = model.predict(test_generator)"
-      ],
-      "metadata": {
-        "id": "JMTP-BHufvUL",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c4bdf1db-8d40-494d-acdf-a2bac3113473"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Found 624 images belonging to 1 classes.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/keras/src/trainers/data_adapters/py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
-            "  self._warn_if_super_not_called()\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[1m624/624\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m381s\u001b[0m 610ms/step\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "ids = [os.path.basename(x) for x in test_generator.filenames]\n",
-        "\n",
-        "submissao = pd.DataFrame({\n",
-        "    'id': ids,\n",
-        "    'target': previsoes.flatten()\n",
-        "})\n",
-        "\n",
-        "submissao.head()"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "3Go26qK8pXrO",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
+        "id": "3Go26qK8pXrO",
         "outputId": "16338a2c-f327-4a7a-c687-9dfa226dfa7b"
       },
-      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "              id    target\n",
-              "0  img_0001.jpeg  0.382500\n",
-              "1  img_0002.jpeg  0.694491\n",
-              "2  img_0003.jpeg  0.999546\n",
-              "3  img_0004.jpeg  0.003125\n",
-              "4  img_0005.jpeg  0.134016"
-            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "summary": "{\n  \"name\": \"submissao\",\n  \"rows\": 624,\n  \"fields\": [\n    {\n      \"column\": \"id\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 624,\n        \"samples\": [\n          \"img_0447.jpeg\",\n          \"img_0497.jpeg\",\n          \"img_0216.jpeg\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"target\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 371,\n        \"samples\": [\n          0.9999566078186035,\n          0.0005449464661069214,\n          0.9937008619308472\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}",
+              "type": "dataframe",
+              "variable_name": "submissao"
+            },
             "text/html": [
               "\n",
               "  <div id=\"df-7f4a1b87-eb96-4559-b00c-6b37f0bf7af4\" class=\"colab-df-container\">\n",
@@ -459,28 +430,59 @@
               "    </div>\n",
               "  </div>\n"
             ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "submissao",
-              "summary": "{\n  \"name\": \"submissao\",\n  \"rows\": 624,\n  \"fields\": [\n    {\n      \"column\": \"id\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 624,\n        \"samples\": [\n          \"img_0447.jpeg\",\n          \"img_0497.jpeg\",\n          \"img_0216.jpeg\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"target\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 371,\n        \"samples\": [\n          0.9999566078186035,\n          0.0005449464661069214,\n          0.9937008619308472\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
-            }
+            "text/plain": [
+              "              id    target\n",
+              "0  img_0001.jpeg  0.382500\n",
+              "1  img_0002.jpeg  0.694491\n",
+              "2  img_0003.jpeg  0.999546\n",
+              "3  img_0004.jpeg  0.003125\n",
+              "4  img_0005.jpeg  0.134016"
+            ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 11
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# mapeamento dos ids para formatação pro kaggle\n",
+        "ids = [os.path.basename(x) for x in test_generator.filenames]\n",
+        "\n",
+        "submissao = pd.DataFrame({\n",
+        "    'id': ids,\n",
+        "    'target': previsoes.flatten()\n",
+        "})\n",
+        "\n",
+        "submissao.head()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "path_final = './submission.csv'\n",
-        "submissao.to_csv(path_final, index=False, sep=',')"
-      ],
+      "execution_count": 12,
       "metadata": {
         "id": "NQPsBywDpUnQ"
       },
-      "execution_count": 12,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "path_final = './submission.csv'\n",
+        "submissao.to_csv(path_final, index=False, sep=',')"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyO3rO5DnEzuZKmytCfjtHik",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
